--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,17 @@ dependencies {
 
 }
 
+plugins {
+  id "org.sonarqube" version "3.5.0.2730"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "prociow_Android-Test-Coverage"
+    property "sonar.organization", "prociow"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
 
 
 
