--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,18 @@ buildscript {
     }
 }
 
+plugins {
+  id "org.sonarqube" version "3.5.0.2730"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "prociow_Android-Test-Coverage"
+    property "sonar.organization", "prociow"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
+
 subprojects {
     apply from: "../tools/detekt/detekt.gradle"
     apply from: "../tools/coverage/jacoco.gradle"
